yaml/service/myapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-deployment
spec:
  selector:
    matchLabels:
      app: demo-api
  replicas: 3
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      containers:
      - name: demo-api-container
        image: leasy/demo-api:v2
        command: ["/demo-api/start.sh"]
        ports:
        - name: http
          containerPort: 8080
