yaml/service/myapp-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-headless
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: demo-api
  clusterIP: "None"
  ports:
  - name: http
    port: 8080
    targetPort: 8080
