yaml/service/myapp-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: demo-api
  ports:
  - name: http
    port: 8080
    targetPort: 8080
