yaml/service/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: demo-api
  ports:
  - name: http
    port: 8080
    targetPort: 8080
