yaml/service/my-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: demo-api.info
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
